# VisualizerToy

./: .gitignore  .gitmodules
AssetConverters/ConverterCommon/: CMakeLists.txt
AssetConverters/ConverterCommon/Sources/ConverterCommon/: ResourceConverterPlugin.cpp  ResourceConverterPlugin.h
AssetConverters/ModelConverterFBX/: CMakeLists.txt
AssetConverters/ModelConverterFBX/Sources/ModelConverterFBX/: FbxFileSystemReadStream.h  FbxHierData.cpp  FbxHierData.h  FbxMemoryStream.h  ModelConverterFBX.cpp  ModelConverterFBX.h  ModelConverterFBXPlugin.cpp  ModelConverterFBXPlugin.h
AssetConverters/ShaderConverterHLSL/: CMakeLists.txt
AssetConverters/ShaderConverterHLSL/Sources/ShaderConverterHLSL/: DXCCommon.h  ShaderConverterHLSL.cpp  ShaderConverterHLSL.h  ShaderConverterHLSLPlugin.cpp  ShaderConverterHLSLPlugin.h  ShaderIncludeProvider.cpp  ShaderIncludeProvider.h
AssetsConverters/ShaderConverter/: CMakeLists.txt
AssetsConverters/ShaderConverter/Sources/ShaderConverter/: ShaderConverterPlugin.cpp  ShaderConverterPlugin.h
CMake/: Array2d.cmake  Colors.cmake  (+7 more)
DemoProjects/Common/FreeCameraController/: CMakeLists.txt
DemoProjects/Common/FreeCameraController/Sources/FreeCameraController/: FreePerspectiveCameraController.cpp  FreePerspectiveCameraController.h
DemoProjects/Test/: CMakeLists.txt  Modules.cmake  Test.vtproj  build.sh
DemoProjects/Test/Sources/: TestDemoGameModule.cpp  TestDemoGameModule.h
Engine/Engine/Common/: CMakeLists.txt  CommonEngineModules.cmake  ECSEngineModules.cmake
Engine/Engine/Common/Sources/Engine/: EngineEnvironment.h  EngineInstance.h  IEngine.h
Engine/Engine/Private/: CMakeLists.txt  EngineModules.cmake  ThirdPartyModules.cmake
Engine/Engine/Private/Sources/Engine/: Engine.cpp  Engine.h
Engine/Modules/Debugging/: CMakeLists.txt  CommonDebuggingModules.cmake  DebuggingModules.cmake
Engine/Modules/Debugging/DebugUiSystem/Common/: CMakeLists.txt
Engine/Modules/Debugging/DebugUiSystem/Private/: CMakeLists.txt
Engine/Modules/Debugging/ImGui/: CMakeLists.txt
Engine/Modules/Debugging/ImGui/Common/: CMakeLists.txt
Engine/Modules/Debugging/ImGui/Private/: CMakeLists.txt
Engine/Modules/EntityComponentSystem/: CMakeLists.txt
Engine/Modules/EntityComponentSystem/Sources/EntityComponentSystem/: EntityComponentSystem.cpp  EntityComponentSystem.h
Engine/Modules/EventSystem/Common/: CMakeLists.txt
Engine/Modules/EventSystem/Private/: CMakeLists.txt
Engine/Modules/FileSystem/Private/: CMakeLists.txt
Engine/Modules/GameSystem/Common/: CMakeLists.txt
Engine/Modules/GameSystem/Private/: CMakeLists.txt
Engine/Modules/Graphics/: CMakeLists.txt  CommonGraphicModules.cmake  GraphicModules.cmake
Engine/Modules/Graphics/Device/: CMakeLists.txt  CommonDeviceModules.cmake  DeviceModules.cmake
Engine/Modules/Graphics/Device/Buffer/: CMakeLists.txt
Engine/Modules/Graphics/Device/CommandResources/: CMakeLists.txt
Engine/Modules/Graphics/Device/GraphicDevice/: CMakeLists.txt
Engine/Modules/Graphics/Device/GraphicObject/: CMakeLists.txt
Engine/Modules/Graphics/Device/GraphicPipeline/: CMakeLists.txt
Engine/Modules/Graphics/Device/GraphicResourceCommon/: CMakeLists.txt
Engine/Modules/Graphics/Device/GraphicSynchronization/: CMakeLists.txt
Engine/Modules/Graphics/Device/InputLayout/: CMakeLists.txt
Engine/Modules/Graphics/Device/ManagedGraphicDevice/: CMakeLists.txt
Engine/Modules/Graphics/Device/ResourceCommon/: CMakeLists.txt
Engine/Modules/Graphics/Device/Shaders/: CMakeLists.txt
Engine/Modules/Graphics/Device/SwapChain/: CMakeLists.txt
Engine/Modules/Graphics/Device/Textures/: CMakeLists.txt
Engine/Modules/Graphics/Platform/: CMakeLists.txt
Engine/Modules/Graphics/Presenter/Common/: CMakeLists.txt
Engine/Modules/Graphics/Presenter/Private/: CMakeLists.txt
Engine/Modules/Graphics/Renderer/: CMakeLists.txt  CommonRendererModules.cmake  RendererModules.cmake
Engine/Modules/Graphics/Renderer/DefaultRender/: CMakeLists.txt
Engine/Modules/Graphics/Renderer/DefaultSceneRender/: CMakeLists.txt
Engine/Modules/Graphics/ShaderConverter/: CMakeLists.txt
Engine/Modules/LevelSystem/Common/: CMakeLists.txt
Engine/Modules/LevelSystem/Private/: CMakeLists.txt
Engine/Modules/Profile/: CMakeLists.txt
Engine/Modules/Utils/: CMakeLists.txt  CommonUtilsModules.cmake  UtilsModules.cmake
Engine/Modules/Utils/ProjectLoader/: CMakeLists.txt
Engine/Modules/Utils/XmlParser/: CMakeLists.txt
Engine/Modules/WindowSystem/: CMakeLists.txt
Engine/Modules/WindowSystem/Common/: CMakeLists.txt
Engine/Modules/WindowSystem/Private/: CMakeLists.txt
Plugins/D3D12GraphicsPlugin/: CMakeLists.txt
Plugins/D3D12GraphicsPlugin/Sources/D3D12GraphicsPlugin/: D3D12ComPtrDefines.h  D3D12Core.h  D3D12GraphicsPlugin.cpp  D3D12GraphicsPlugin.h
Plugins/DummyResourceSystemPlugin/: CMakeLists.txt
Plugins/DummyResourceSystemPlugin/Sources/DummyResourceSystemPlugin/: DummyResourceSystem.cpp  DummyResourceSystem.h  DummyResourceSystemPlugin.cpp  ManagedPackagedResourceRequest.cpp  ManagedPackagedResourceRequest.h  ManagedResourceData.cpp  ManagedResourceData.h  ManagedResourceDependencyState.cpp  ManagedResourceDependencyState.h  ManagedResourceSystemConverterArgs.cpp  ManagedResourceSystemConverterArgs.h  ResourceLoader.cpp  ResourceLoader.h
Plugins/TestPlugin/: CMakeLists.txt
Plugins/TestPlugin/Sources/TestPlugin/: TestPlugin.cpp  TestPlugin.h
Plugins/VulkanGraphicsPlugin/: CMakeLists.txt
Plugins/VulkanGraphicsPlugin/Sources/VulkanGraphicsPlugin/: VulkanCore.h  VulkanGraphicsPlugin.cpp  VulkanGraphicsPlugin.h
Plugins/Win32PlatformPlugin/: CMakeLists.txt
Plugins/Win32PlatformPlugin/Sources/Win32PlatformPlugin/: Win32Platform.cpp  Win32Platform.h  Win32PlatformPlugin.cpp  Win32PlatformPlugin.h  Win32PlatformUtils.h  Win32Window.cpp  Win32Window.h  Win32WindowSystem.cpp  Win32WindowSystem.h
StandaloneLauncher/: CMakeLists.txt  EngineConverters.cmake  EnginePlugins.cmake  build.sh
StandaloneLauncher/Sources/: GameModuleLoader.cpp  GameModuleLoader.h  InitParams.cpp  InitParams.h  Main.cpp  ReturningCodes.h
(+516 files in other folders)
